取り敢えず本家の最新版を取ってきた

--- a/readme
+++ b/readme
@@ -1,1 +1,1 @@
-hoge
+AutoPagerize for Greasemonkey を Opera の User JavaScript に移植した「oAutoPagerize」( http://d.hatena.ne.jp/os0x/20071202/oautopagerize )を弄ってます。
