--- a/readme
+++ b/readme
@@ -1,1 +1,3 @@
-AutoPagerize for Greasemonkey を Opera の User JavaScript に移植した「oAutoPagerize」( http://d.hatena.ne.jp/os0x/20071202/oautopagerize )を弄ってます。
+AutoPagerize for Greasemonkey を Opera の User JavaScript に移植した「oAutoPagerize」(
+http://d.hatena.ne.jp/os0x/20071202/oautopagerize
+)を弄ってます。
